# ondernemercentraal

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  oc_portaal.code-workspace
backend/: .env.dummy  Dockerfile  Dockerfile.base  Dockerfile.keycloak  Makefile  Makefile.check.mk  Makefile.dev.mk  Makefile.local.mk  compose.yml  pyproject.toml  validate_json_files.sh
backend/alembic/: env.py
backend/alembic/versions/: 00a32435c3b4_remove_unique_constraint.py  017ec9ea2098_.py  0e105bb5ac65_fix_cascading.py  18fe960cf1ab_availability.py  2054237371ce_.py  24250a7036a5_track_completion.py  24f8c8910eea_appointment_status.py  299a4666c59b_track_product.py  2a07c7e36e42_file_approval.py  333135d3fa60_remove_unique_constraint.py  335b22557100_request_form.py  36de56afad64_appointment_file.py  374cd42f7e11_add_case_table.py  3d9fb507bfa5_track_priority.py  416ddd4aa931_formulieren_in_kunnen_dienen.py  42c653a43970_request_enums.py  48acfe723eeb_initial_migration.py  4abc5f8f2444_case_file.py  4c5f29f7c30e_case_task.py  50d0c3a0b3f8_appointment.py  525df381c604_case_number.py  5390a0862f31_track_form.py  55daed29d06a_product_code.py  5771c3de15b8_request.py  5850b285a8b5_kvk_and_company_nullable.py  59accb0daea9_track_form_cascade.py  5a03098911b9_jsonschema_forms.py  5ae6db78e6d6_rename_form_name.py  5c4ac4fb09af_add_bsn_to_client_model.py  5fb3a80273df_track_status.py  65b118c12d09_refactor_form_data_model.py  (+40 more)
backend/app/: main.py
backend/db/: .gitignore
backend/keycloak/: realm.json
backend/tests/: conftest.py  fixtures.py  test_appointment_mail_confirmation.py
(+332 files in other folders)
